--- a/templates/bond_slave_nmconnection.j2
+++ b/templates/bond_slave_nmconnection.j2
@@ -2,7 +2,7 @@
 
 [connection]
 id={{ item.1 }}
-{% if item.0.type == 'ipoib' %}
+{% if 'type' in item.0 and item.0.type == 'ipoib' %}
 type=infiniband
 {% else %}
 type={{ (item.1 is match(dummy_interface_regex)) | ternary('dummy', 'ethernet') }}
